[gd_scene load_steps=3 format=3 uid="uid://vy7jx66n6u58"]

[ext_resource type="FontFile" uid="uid://cmfm0qgcxvouq" path="res://graphics/font/subatomic.tsoonami.ttf" id="1_hqf65"]
[ext_resource type="Script" path="res://scenes/ui.gd" id="1_wjhv2"]

[node name="UI" type="CanvasLayer" groups=["ui"]]
script = ExtResource("1_wjhv2")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.5
offset_right = 68.5
offset_bottom = 44.0
grow_horizontal = 2
theme_override_constants/margin_top = 20

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_hqf65")
theme_override_font_sizes/font_size = 50
text = "1234"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 485.0
grow_vertical = 0
theme_override_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="MarginContainer3" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -162.0
offset_bottom = 46.0
grow_horizontal = 0
theme_override_constants/margin_top = 20

[node name="LevelLabel" type="Label" parent="MarginContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_hqf65")
theme_override_font_sizes/font_size = 30
text = "Level 1"
horizontal_alignment = 1

[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
